Add new teams and organization endpoints
